--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
              <nav>
                  <ul>
                   <li><a href="index.html" class="current">Home</a></li>
-                  <li><a href="productlist.asp">Product List</a></li>
+                  <li><a href="slides/products/cats.html">Product List</a></li>
                   <li><a href="personal.asp">Personal</a></li>
                   <li><a href="email.asp">Join Email</a></li>
                  </ul>
@@ -49,16 +49,16 @@
     
                 <h2>Product of the Week</h2>
                 <div id ='cat'>
-                <a href ="/products/cat.html">
+                <a href ="slides/products/cats.html">
                 <img src='images/cat1.jpg' alt='cat'>
                 </a>
                 </div>  
-                <a href="/products/cat.html">20" Deranged Cat</a>
+                <a href="slides/products/cat.html">20" Deranged Cat</a>
                 <h2>My guarantee</h2>
 
                 <p>If you aren't completely satisfied with everything you buy from my site, 
                     you can return it for a full refund. <b>No questions asked!</b></p>
             </article> 
         </main>
-      <footer> &copy; 2016 Ben Murach</footer>    
+          <footer> &copy; 2016 Ben Murach</footer>    
 </body>    
