--- a/web/index.html
+++ b/web/index.html
@@ -18,9 +18,9 @@
              <nav>
                  <ul>
                   <li><a href="index.html" class="current">Home</a></li>
-                  <li><a href="slides/products/cats.html">Product List</a></li>
-                  <li><a href="personal.asp">Personal</a></li>
-                  <li><a href="email.asp">Join Email</a></li>
+                  <li><a href="slides/products/productList.html">Product List</a></li>
+                  <li><a href="personal.html">Personal</a></li>
+                  <li><a href="email.html">Join Email</a></li>
                  </ul>
             </nav>
             
