--- a/web/slides/products/cats.html
+++ b/web/slides/products/cats.html
@@ -18,7 +18,7 @@
              <nav>
                  <ul>
                   <li><a href="../../index.html">Home</a></li>
-                  <li><a href="cats.html">Product List</a></li>
+                  <li><a href="productList.html">Product List</a></li>
                   <li><a href="personal.asp">Personal</a></li>
                   <li><a href="email.asp">Join Email</a></li>
                  </ul>
